<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pixiv"
            android:icon="@drawable/pixiv_icon"
            android:title="@string/menu_pixiv" />
        <item
            android:id="@+id/nav_nhentai"
            android:icon="@drawable/nhentai_icon2"
            android:title="@string/menu_nhentai" />
        <item
            android:id="@+id/nav_niconico"
            android:icon="@drawable/niconico_icon"
            android:title="@string/menu_niconico" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item
        android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
